Update logstash configuration to seperate webservice calls from standard sitecore logs.

--- a/src/Framework/PropellerLogger/DockerCompose/propeller-input.conf
+++ b/src/Framework/PropellerLogger/DockerCompose/propeller-input.conf
@@ -8,33 +8,26 @@ input {
 filter {
   if [type] == "log4net" {
     grok {
-      match => { "message" => "(?m)%{NUMBER:threadid} %{TIMESTAMP_ISO8601:sourceTimestamp} %{WORD:hostname} %{NOTSPACE:log_owner} (?<sitename>\b[\w+|.]+\b) %{LOGLEVEL:logLevel} %{GREEDYDATA:[@metadata][tmpMessage]}"}
+      match => { "message" => "(?m)%{NUMBER:threadid} %{TIMESTAMP_ISO8601:sourceTimestamp} %{NOTSPACE:hostname} %{NOTSPACE:log_owner} (?<sitename>\b[\w+|.]+\b) %{NOTSPACE:indexname} %{LOGLEVEL:logLevel} %{GREEDYDATA:}(?<service_path>(?<=Webservice call, Service......:).[^\n]+)%{GREEDYDATA}(?<service_endpoint>(?<=Webservice call, Function.....:).[^\n]+)%{GREEDYDATA}(?<service_responsetime>(?<=Webservice call, Time.........:).[^ms]+)"}
+      match => { "message" => "(?m)%{NUMBER:threadid} %{TIMESTAMP_ISO8601:sourceTimestamp} %{NOTSPACE:hostname} %{NOTSPACE:log_owner} (?<sitename>\b[\w+|.]+\b) %{NOTSPACE:indexname} %{LOGLEVEL:logLevel} %{GREEDYDATA:[@metadata][tmpMessage]}"}
     }
-    mutate {
-      update => ["message", "%{[@metadata][tmpMessage]}"]
-    }
-    mutate {
-      add_field => { "[@metadata][lowercaseSitename]" => "%{sitename}"}
-      add_field => { "[@metadata][perf]" => "%{message}"}
-    }
-    mutate {
-      lowercase => [ "[@metadata][lowercaseSitename]" ]
-      split => ["[@metadata][perf]", "|"]
-    }
-    if [log_owner] == "propeller.logger.PerfWatch" {
+
+    if [log_owner] == "PT.Framework.Logging.Infrastructure.LogWebServiceCall" {
       mutate {
-        add_field => { "perf_name" => "%{[@metadata][perf][0]}"}
-        add_field => { "perf_value" => "%{[@metadata][perf][1]}"}
+        convert => {"service_responsetime" => "integer"}
+        add_field => {"service_url" => "%{service_path}/%{service_endpoint}"}
+        gsub => [
+          "message", "^.+Webservice call >>>>>>>>>>>>>>", "Webservice call >>>>>>>>>>>>>>"
+        ]
       }
     } else {
-      mutate{
-        add_field => { "perf_name" => ""}
-        add_field => { "perf_value" => "0"}
+      mutate {
+        
+        update => ["message", "%{[@metadata][tmpMessage]}"]
       }
     }
-    mutate{
-      convert => {"perf_value" => "integer"}
-      update => ["sitename", "%{[@metadata][lowercaseSitename]}"]
+    mutate {
+      lowercase => [ "sitename" ]
     }
   }
 }
@@ -43,6 +36,6 @@ output {
   elasticsearch {
     hosts => ["localhost"]
     manage_template => false
-    index => "%{sitename}"
-    } 
+    index => "%{indexname}"
+  } 
 }
