--- a/src/Framework/PropellerLogger/App_Config/Include/Propeller.Logger/propellerlog.config
+++ b/src/Framework/PropellerLogger/App_Config/Include/Propeller.Logger/propellerlog.config
@@ -5,7 +5,7 @@
         <port value="8085" />
         <destination value="127.0.0.1" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%4t %d{yyyy-MM-dd HH:mm:ss,fff} %P{hostname} %P{log_owner} %P{sitename} %-5p %m%n" />
+          <conversionPattern value="%4t %d{yyyy-MM-dd HH:mm:ss,fff} %P{hostname} %P{log_owner} %P{sitename} %P{indexname} %-5p %m%n" />
         </layout>
       </appender>
       <root>
